added login/register components. Login/register functionality works

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li><a class="btn" routerLinkActive="active" routerLink="/Characters">Characters</a></li>
-  <li><a class="btn" routerLinkActive="active" routerLink="/Spells">Spells</a></li>
-  <li><a class="btn" routerLinkActive="active" routerLink="/Potions">Potions</a></li>
+  <li><a class="btn" routerLinkActive="active" routerLink="/characters">Characters</a></li>
+  <li><a class="btn" routerLinkActive="active" routerLink="/spells">Spells</a></li>
+  <li><a class="btn" routerLinkActive="active" routerLink="/potions">Potions</a></li>
+  <li><a class="btn" routerLinkActive="active" routerLink="/login">Login</a></li>
+  <li><a class="btn" routerLinkActive="active" routerLink="/register">Register</a></li>
 </ul>
