--- a/src/app/components/spells/spells.component.html
+++ b/src/app/components/spells/spells.component.html
@@ -1,1 +1,40 @@
-<p>spells works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5" *ngFor="let spell of spells">
+            <div class="card">
+                <div class="card-topper card-img-top">{{spell.name}}</div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table id="test" class="table table-bordered table-hover">
+                            <tbody>
+                                <tr *ngIf="spell?.incantation">
+                                    <td class="titles">Incantation</td>
+                                    <td class="gender text-center">{{spell.incantation}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Effect</td>
+                                    <td class="house text-center">{{spell.effect}}</td>
+                                </tr>
+                                <tr *ngIf="spell?.canBeVerbal">
+                                    <td class="titles">Can be verbal</td>
+                                    <td class="isVerbal text-center">{{spell.canBeVerbal}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Type</td>
+                                    <td class="text-center">{{spell.type}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Light</td>
+                                    <td class="text-center">{{spell.light}}</td>
+                                </tr>
+                                <tr *ngIf="spell?.creator">
+                                    <td class="titles">Creator</td>
+                                    <td class="isStudent text-center">{{spell.creator}}</td>
+                                </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
