--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,9 +5,22 @@
     <div class="form-group">
       <label for="registerUsername">Username:</label>
       <input type="text" id="registerUsername" name="registerUsername" class="form-control" [(ngModel)]="newUsername">
-    </div>  <div class="form-group">
+    </div>  
+    <div class="form-group">
       <label for="registerPassword">Password:</label>
       <input type="password" id="registerPassword" name="registerPassword" class="form-control" [(ngModel)]="newPassword">
+    </div>
+    <div class="form-group">
+      <label for="registerFirstName">First name:</label>
+      <input type="text" id="registerFirstName" name="registerFirstName" class="form-control" [(ngModel)]="newFirstName">
+    </div>
+    <div class="form-group">
+      <label for="registerLastName">Last name:</label>
+      <input type="text" id="registerLastName" name="registerLastName" class="form-control" [(ngModel)]="newLastName">
+    </div>
+    <div class="form-group">
+      <label for="registerEmail">E-mail:</label>
+      <input type="text" id="registerEmail" name="registerEmail" class="form-control" [(ngModel)]="newEmail">
     </div>
   </form>
   <button class="btn btn-primary" (click)="register()">Register</button>
