--- a/src/app/components/potions/potions.component.css
+++ b/src/app/components/potions/potions.component.css
@@ -26,3 +26,41 @@
   background-color: #312823;
   color: #ffffff;
 }
+
+
+
+
+label input[type="checkbox"] {
+  display: none;
+}
+
+.custom-checkbox {
+  margin-left: 2em;
+  position: relative;
+  cursor: pointer;
+}
+
+.custom-checkbox .glyphicon {
+  color: black;
+  position: absolute;
+  top: 0.4em;
+  left: -1.25em;
+  font-size: 0.75em;
+}
+
+.custom-checkbox .glyphicon-star-empty {
+  color: gray;
+}
+
+.custom-checkbox .glyphicon-star {
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.custom-checkbox:hover .glyphicon-star {
+  opacity: 0.5;
+}
+
+.custom-checkbox input[type="checkbox"]:checked~.glyphicon-star {
+  opacity: 1;
+}
