--- a/src/app/components/characters/characters.component.html
+++ b/src/app/components/characters/characters.component.html
@@ -1,1 +1,36 @@
-<p>characters works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5" *ngFor="let character of characters">
+            <div class="card">
+                <div class="card-topper card-img-top">{{character.character}}</div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table id="test" class="table table-bordered table-hover">
+                            <tbody>
+                                <tr *ngIf="character?.nickname">
+                                    <td class="titles">Nickname</td>
+                                    <td class="gender text-center">{{character.nickname}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Is he/she Hogwarts Student?</td>
+                                    <td class="house text-center">{{character.hogwartsStudent}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Hogwarts house</td>
+                                    <td class="text-center">{{character.hogwartsHouse}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Actor/Actress</td>
+                                    <td class="text-center">{{character.interpretedBy}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="titles">Image</td>
+                                    <td class="text-center"><img src="{{character.image}}"></td>
+                                </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
