--- a/src/app/components/spells/spells.component.html
+++ b/src/app/components/spells/spells.component.html
@@ -37,6 +37,12 @@
                                 </tr>
                         </table>
                     </div>
+                    <div>
+                      <button (click)="addFavorite(spell.id)" type="button" class="btn btn-outline-secondary">
+                        <i class="glyphicon glyphicon-star"></i>
+                        <span> Mark as favorite</span>
+                      </button>
+                    </div>
                 </div>
             </div>
         </div>
