--- a/src/app/components/spells/spells.component.css
+++ b/src/app/components/spells/spells.component.css
@@ -26,3 +26,54 @@
     background-color: #312823;
     color: #ffffff;
 }
+
+label input[type="checkbox"] {
+  display: none;
+}
+
+.custom-checkbox {
+  margin-left: 2em;
+  position: relative;
+  cursor: pointer;
+}
+
+.custom-checkbox .glyphicon {
+  color: black;
+  position: absolute;
+  top: 0.4em;
+  left: -1.25em;
+  font-size: 0.75em;
+}
+
+.custom-checkbox .glyphicon-star-empty {
+  color: gray;
+}
+
+.custom-checkbox .glyphicon-star {
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.custom-checkbox:hover .glyphicon-star {
+  opacity: 0.5;
+}
+
+.custom-checkbox input[type="checkbox"]:checked~.glyphicon-star {
+  opacity: 1;
+}
+
+
+
+
+.btn-outline-secondary {
+  height: 40px;
+  width: 120px;
+  font-size: 13px;
+  background-color: #312823;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
