Added favorites to characters

--- a/src/app/components/characters/characters.component.html
+++ b/src/app/components/characters/characters.component.html
@@ -29,6 +29,14 @@
                                 </tr>
                         </table>
                     </div>
+
+                    <div>
+                      <button (click)="addFavorite(character.id)" type="button" class="btn btn-outline-secondary">
+                        <i class="glyphicon glyphicon-star"></i>
+                        <span> Add to favorites</span>
+                      </button>
+                    </div>
+
                 </div>
             </div>
         </div>
