--- a/src/app/components/potions/potions.component.html
+++ b/src/app/components/potions/potions.component.html
@@ -46,7 +46,7 @@
           <div>
             <button (click)="addFavorite(potion.id)" type="button" class="btn btn-outline-secondary">
               <i class="glyphicon glyphicon-star"></i>
-              <span> Mark as favorite</span>
+              <span>Add to favorites</span>
             </button>
           </div>
 
