--- a/src/app/components/spells/spells.component.html
+++ b/src/app/components/spells/spells.component.html
@@ -40,7 +40,7 @@
                     <div>
                       <button (click)="addFavorite(spell.id)" type="button" class="btn btn-outline-secondary">
                         <i class="glyphicon glyphicon-star"></i>
-                        <span> Mark as favorite</span>
+                        <span> Add to favorites</span>
                       </button>
                     </div>
                 </div>
