Added deleting favorite functionality

--- a/src/app/components/characters/characters.component.html
+++ b/src/app/components/characters/characters.component.html
@@ -97,6 +97,12 @@
                 </tr>
             </table>
           </div>
+          <div>
+            <button (click)="deleteFavorite(character.id)" type="button" class="btn btn-outline-secondary">
+              <span> -Remove from favorites</span>
+              <i class="glyphicon glyphicon-star"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
