--- a/src/app/components/potions/potions.component.html
+++ b/src/app/components/potions/potions.component.html
@@ -110,6 +110,12 @@
                 </tr>
             </table>
           </div>
+          <div>
+            <button (click)="deleteFavorite(potion.id)" type="button" class="btn btn-outline-secondary">
+              <span> -Remove from favorites</span>
+              <i class="glyphicon glyphicon-star"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
