--- a/src/app/components/spells/spells.component.html
+++ b/src/app/components/spells/spells.component.html
@@ -98,6 +98,12 @@
                   </tr>
               </table>
             </div>
+            <div>
+              <button (click)="deleteFavorite(spell.id)" type="button" class="btn btn-outline-secondary">
+                <span> -Remove from favorites</span>
+                <i class="glyphicon glyphicon-star"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
